pybind11_add_module(latticemodelsimulationlib_python latticemodelsimulationlib_python.cpp)

target_link_libraries(latticemodelsimulationlib_python PUBLIC latticemodelsimulationlib mcmcsimulationlib::mcmcsimulationlib paramhelper::paramhelper)
set_target_properties(latticemodelsimulationlib_python PROPERTIES OUTPUT_NAME latticemodelsimulation)
